去除sun包的类